--- a/src/blocks/form/editor.css
+++ b/src/blocks/form/editor.css
@@ -3,16 +3,16 @@
 	--osf-field-id-color: #757575;
 }
 
-.osf__icon,
-.block-editor-block-variation-picker__skip .osf__icon,
-.block-editor-block-variation-picker__variations .osf__icon,
-.wp-block-group-placeholder__variations .osf__icon {
+.osf-icon,
+.block-editor-block-variation-picker__skip .osf-icon,
+.block-editor-block-variation-picker__variations .osf-icon,
+.wp-block-group-placeholder__variations .osf-icon {
 	fill: transparent !important;
 }
 
-.block-editor-block-variation-picker__skip .components-button:hover .osf__icon,
-.block-editor-block-variation-picker__variations .components-button:hover .osf__icon,
-.wp-block-group-placeholder__variations .components-button:hover .osf__icon {
+.block-editor-block-variation-picker__skip .components-button:hover .osf-icon,
+.block-editor-block-variation-picker__variations .components-button:hover .osf-icon,
+.wp-block-group-placeholder__variations .components-button:hover .osf-icon {
 	fill: transparent !important;
 }
 
