--- a/src/components/FormActionModal/style.css
+++ b/src/components/FormActionModal/style.css
@@ -1,4 +1,4 @@
-.osf-form__actions__action-message {
+.osf-action-modal__message {
 	border-radius: 2px;
 	border: 1px solid #949494;
 	box-shadow: 0 0 0 transparent;
@@ -9,12 +9,12 @@
 	width: 100%;
 }
 
-.osf-form__actions__action-message:focus {
+.osf-action-modal__message:focus {
 	border-color: var(--wp-admin-theme-color, #3858e9);
 	box-shadow: 0 0 0 0.5px var(--wp-admin-theme-color, #3858e9);
 	outline: 2px solid transparent;
 }
 
-body:has(.osf-form__actions__modal) .block-editor-rich-text__inline-format-toolbar {
+body:has(.osf-action-modal) .block-editor-rich-text__inline-format-toolbar {
 	z-index: 1000001;
 }
