--- a/src/components/FormActions/style.css
+++ b/src/components/FormActions/style.css
@@ -1,3 +1,3 @@
-.block-editor-block-inspector .components-base-control.osf-form__actions-toggle {
+.block-editor-block-inspector .components-base-control.osf-action-list__toggle {
 	margin-bottom: 0;
 }
